--- a/js/managers/discord/callback.html
+++ b/js/managers/discord/callback.html
@@ -31,21 +31,25 @@
                 const res = await fetch(`${apiBase}sheldon/discord/exchange`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
+                    credentials: 'include',
                     body: JSON.stringify({ code, redirect: window.location.href })
                 });
 
                 const data = await res.json();
-                if (!res.ok || !data.session) {
+                if (!res.ok || !data.loggedIn) {
                     document.getElementById('message').textContent = 'Login failed';
                     console.error('exchange failed', res.status, data);
                     return;
                 }
 
-                document.cookie = `session=${data.session}; Path=/; Max-Age=${315360000}`; // ~10 years
-                localStorage.setItem('session', data.session);
-
                 if (window.opener) {
-                    window.opener.postMessage({ loggedIn: true, session: data.session }, '*');
+                    let openerOrigin = window.location.origin;
+                    try {
+                        if (document.referrer) {
+                            openerOrigin = new URL(document.referrer).origin;
+                        }
+                    } catch (err) { }
+                    window.opener.postMessage({ loggedIn: true }, openerOrigin);
                 }
 
                 document.getElementById('message').textContent = 'Logged in! Closing...';
